adding code style, editor config, and updating vmoptions