@@ -1,25 +1,24 @@
--server
--Xms2048m
--Xmx2048m
--XX:NewSize=512m
--XX:MaxNewSize=512m
--XX:PermSize=512m
--XX:MaxPermSize=512m
--XX:+UseParNewGC
--XX:ParallelGCThreads=4
--XX:MaxTenuringThreshold=1
--XX:SurvivorRatio=8
--XX:+UseCodeCacheFlushing
--XX:+UseConcMarkSweepGC
--XX:+AggressiveOpts
--XX:+CMSClassUnloadingEnabled
--XX:+CMSIncrementalMode
--XX:+CMSIncrementalPacing
--XX:+CMSParallelRemarkEnabled
--XX:CMSInitiatingOccupancyFraction=65
--XX:+CMSScavengeBeforeRemark
--XX:+UseCMSInitiatingOccupancyOnly
--XX:ReservedCodeCacheSize=64m
--XX:-TraceClassUnloading
 -ea
+-server
+-Xms1G
+-Xmx4G
+-XX:+UseG1GC
+-XX:-UseParNewGC
+-XX:-UseConcMarkSweepGC
+-XX:ReservedCodeCacheSize=256m
+-XX:+OmitStackTraceInFastThrow
 -Dsun.io.useCanonCaches=false
+-XX:+UseStringDeduplication
+-XX:+UseCompressedOops
+-Dfile.encoding=UTF-8
+-XX:SoftRefLRUPolicyMSPerMB=50
+-XX:+AggressiveOpts
+-Djava.net.preferIPv4Stack=true
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:MaxJavaStackTraceDepth=-1
+-Xverify:none
+
+-XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+-XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-agentlib:yjpagent=probe_disable=*,disablealloc,disabletracing,onlylocal,disableexceptiontelemetry,delay=10000,sessionname=IntelliJIdea2018.3
+-Dide.no.platform.update=true
